--- a/index.html
+++ b/index.html
@@ -356,32 +356,75 @@
     <section id="certifications" class="certifications">
         <h2>Certifications</h2>
         <div class="card-section">
-            <div class="card">
-                <h3>Python for Data Science, AI, and Development</h3>
-                <p>IBM</p>
-            </div>
-            <div class="card">
-                <h3>Machine Learning with Python</h3>
-                <p>IBM</p>
-            </div>
-            <div class="card">
-                <h3>Unsupervised Learning in Python</h3>
-                <p>DataCamp</p>
-            </div>
-            <div class="card">
-                <h3>Machine Learning with Tree-Based Models</h3>
-                <p>DataCamp</p>
-            </div>
-            <div class="card">
-                <h3>Tools for Data Science</h3>
-                <p>IBM</p>
-            </div>
-            <div class="card">
-                <h3>Data Analysis in Python</h3>
-                <p>IBM</p>
-            </div>
+
+            <a href="https://www.novaims.unl.pt/pt/certificate-validation/?credential=60615a18-aedb-4040-b967-e6871d0a0ab6" target="_blank" class="card-link">
+                <div class="card">
+                    <img src="141fdc1d-7372-48e1-8e1b-78b81d46c7d7.png" alt="Master's Program Ranking Badge" style="width: 80px; height: auto; margin-bottom: 10px;">
+                    <h3>Master's Program Ranking Badge</h3>
+                    <p>NOVA IMS – Information Management School</p>
+                </div>
+            </a>
+
+            <a href="https://ielts.org/" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>IELTS Academic – English Proficiency</h3>
+                    <p>Level C1 (Advanced) – Cambridge English Language Assessment</p>
+                </div>
+            </a>
+
+
+            <a href="https://www.coursera.org/account/accomplishments/certificate/MMGARA9UR3N9" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Python for Data Science, AI, and Development</h3>
+                    <p>IBM</p>
+                </div>
+            </a>
+
+            <a href="https://www.coursera.org/account/accomplishments/certificate/5E43SV9SDSAY" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Machine Learning with Python</h3>
+                    <p>IBM</p>
+                </div>
+            </a>
+
+            <a href="https://www.datacamp.com/completed/statement-of-accomplishment/course/428434dc644497e584e7ed1d39e1e5a593c8e716" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Unsupervised Learning in Python</h3>
+                    <p>DataCamp</p>
+                </div>
+            </a>
+
+            <a href="https://www.datacamp.com/completed/statement-of-accomplishment/course/06ff23b1d630eacbc8621233c2540d071380b243" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Machine Learning with Tree-Based Models</h3>
+                    <p>DataCamp</p>
+                </div>
+            </a>
+
+            <a href="https://coursera.org/share/fc274bece9825bcfc17d753b88ea398a" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Tools for Data Science</h3>
+                    <p>IBM</p>
+                </div>
+            </a>
+
+            <a href="https://www.coursera.org/account/accomplishments/certificate/QUZ3Q5UACDJU" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Python Project for Data Science</h3>
+                    <p>IBM</p>
+                </div>
+            </a>
+
+            <a href="https://www.coursera.org/account/accomplishments/certificate/Z9RAQ4GJTVHW" target="_blank" class="card-link">
+                <div class="card">
+                    <h3>Data Analysis in Python</h3>
+                    <p>IBM</p>
+                </div>
+            </a>
+
         </div>
     </section>
+
 
     <footer id="footer" class="footer">
         <p>Connect with me:
