--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
             text-decoration: underline;
         }
 
+        .card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+
         /* Tag below title to indicate it's a live project */
         .project-tag {
             font-size: 0.85rem;
