--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <img src="image.jpeg" alt="Sabeen Mubashar" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px; border: 5px solid white;">
         </div>
         <h1>Sabeen Mubashar</h1>
-        <p>Data Scientist | AI/ML Engineer | Cloud & Automation | NLP & Forecasting</p>
+        <p>Data Scientist | AI/ML Engineer</p>
         <a href="#about" class="btn-primary">Learn More</a>
     </div>
 
@@ -230,7 +230,7 @@
         <p>
             Data Scientist with 3+ years of experience delivering scalable AI/ML solutions across aviation, e-commerce, and tech industries.
             Specialized in building predictive systems, automating analytics workflows, and using deep learning and NLP to solve business problems.
-            Strong collaborator across global teams, with a focus on efficiency, performance, and real-world impact.
+            Proven ability to work with global teams to solve real-world business challenges and drive actionable solutions.
         </p>
     </section>
 
@@ -338,8 +338,8 @@
             <a href="https://wine-dashboard.onrender.com/" target="_blank" class="card-link">
                 <div class="card">
                     <img src="wine-dashboard.png" alt="Wine Dashboard">
-                    <h3>Interactive Wine Dashboard – Deployed</h3>
-                    <p class="project-tag">🔗 Live Project</p>
+                    <h3>🔗 Interactive Wine Dashboard – Deployed</h3>
+    
                     <p style="text-align: justify;">Developed and deployed a live interactive wine analytics dashboard using Plotly Dash to explore global and local trends in consumption, production, and pricing. Enabled dynamic filtering and rich visualizations to support intuitive, insight-driven analysis for consumers and industry stakeholders.</p>
                 </div>
             </a>
@@ -347,7 +347,7 @@
             <a href="https://github.com/SabeenAshraf/sql-database-design-lush-candles" target="_blank" class="card-link">
                 <div class="card">
                     <img src="lush-db.png" alt="Lush Candles Database">
-                    <h3>Relational Database for Lush Candles</h3>
+                    <h3>🔗 Relational Database for Lush Candles</h3>
                     <p style="text-align: justify;">Designed and implemented a relational database system for a fictional retail company using MySQL, covering customers, orders, products, and feedback. Enforced data integrity with normalization and foreign keys, built triggers for automation, and created views to support business reporting and transparency.</p>
                 </div>
             </a>
@@ -355,7 +355,7 @@
             <a href="https://github.com/SabeenAshraf/End_to_End_ML_V2" target="_blank" class="card-link">
                 <div class="card">
                     <img src="smith-prediction.png" alt="Smith Parasite ML App">
-                    <h3>Smith Parasite ML Prediction App</h3>
+                    <h3>🔗 Smith Parasite ML Prediction App</h3>
                     <p style="text-align: justify;">Created an ML pipeline for disease prediction with 98.9% F1-score. Built a Flask web app and deployed on cloud for real-time prediction.</p>
                 </div>
             </a>
@@ -369,7 +369,6 @@
 
             <a href="https://www.novaims.unl.pt/pt/certificate-validation/?credential=60615a18-aedb-4040-b967-e6871d0a0ab6" target="_blank" class="card-link">
                 <div class="card">
-                    <img src="141fdc1d-7372-48e1-8e1b-78b81d46c7d7.png" alt="Master's Program Ranking Badge" style="width: 80px; height: auto; margin-bottom: 10px;">
                     <h3>Master's Program Ranking Badge</h3>
                     <p>NOVA IMS – Information Management School</p>
                 </div>
@@ -378,7 +377,7 @@
             <a href="https://ielts.org/" target="_blank" class="card-link">
                 <div class="card">
                     <h3>IELTS Academic – English Proficiency</h3>
-                    <p>Level C1 (Advanced) – Cambridge English Language Assessment</p>
+                    <p>Level C1 (Advanced)</p>
                 </div>
             </a>
 
@@ -406,7 +405,7 @@
 
             <a href="https://www.datacamp.com/completed/statement-of-accomplishment/course/06ff23b1d630eacbc8621233c2540d071380b243" target="_blank" class="card-link">
                 <div class="card">
-                    <h3>Machine Learning with Tree-Based Models</h3>
+                    <h3>ML with Tree-Based Models</h3>
                     <p>DataCamp</p>
                 </div>
             </a>
