--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="card">
                     <img src="insurance-segmentation.png" alt="Insurance Segmentation">
                     <h3>Customer Segmentation for Insurance</h3>
-                    <p style="text-align: justify;">Performed end-to-end customer segmentation using advanced preprocessing and multiple clustering methods, identifying three distinct profiles based on premiums and demographics. Delivered actionable marketing strategies and ensured strong interpretability with decision trees to enable personalized, data-driven campaign targeting.</p>
+                    <p style="text-align: justify;">Performed customer segmentation using advanced preprocessing and multiple clustering methods, identifying three distinct profiles based on premiums and demographics. Delivered actionable marketing strategies and ensured strong interpretability with decision trees to enable personalized, data-driven campaign targeting.</p>
                 </div>
             </a>
 
@@ -356,7 +356,7 @@
                 <div class="card">
                     <img src="smith-prediction.png" alt="Smith Parasite ML App">
                     <h3>🔗 Smith Parasite ML Prediction App</h3>
-                    <p style="text-align: justify;">Created an ML pipeline for disease prediction with 98.9% F1-score. Built a Flask web app and deployed on cloud for real-time prediction.</p>
+                    <p style="text-align: justify;">Developed a machine learning pipeline to predict the probability of contracting The Smith Parasite disease, achieving a 98.9% F1-score. Included data preprocessing, feature engineering, model training, and evaluation. Built a Flask API, integrated it with a web app, and deployed on cloud.</p>
                 </div>
             </a>
 
