--- a/index.html
+++ b/index.html
@@ -314,23 +314,23 @@
             <a href="https://github.com/SabeenAshraf/DL-Breast-Cancer-Detection/blob/main/Breast_Cancer_Detection.ipynb" target="_blank" class="card-link">
                 <div class="card">
                     <img src="cancer-detection.png" alt="Cancer Detection Project">
-                    <h3>Deep Learning-Based Cancer Detection</h3>
-                    <p style="text-align: justify;">Built a breast cancer classification model using the BACH dataset with transfer learning (ResNet50, InceptionV3) and a custom CNN, achieving 93.7% AUROC. Applied tailored preprocessing and augmentation to improve performance on small medical image data.</p>
+                    <h3>🔗 Deep Learning-Based Cancer Detection</h3>
+                    <p style="text-align: justify;">Built a breast cancer classification model using the BACH dataset with 400 histology images across four classes. Applied custom preprocessing, augmentation, and image resizing. Used ResNet50, InceptionV3, and a custom CNN, achieving 93.7% AUROC, showcasing deep learning’s effectiveness in histopathological image analysis.</p>
                 </div>
             </a>
 
             <a href="https://github.com/SabeenAshraf/NLP" target="_blank" class="card-link">
                 <div class="card">
                     <img src="airbnb-listing.png" alt="Airbnb Project">
-                    <h3>Text Mining for Airbnb Listing Prediction</h3>
-                    <p style="text-align: justify;">Built a multilingual (EN, PT, FR, ES) text classification pipeline to predict Airbnb unlistings using NLP and ML, with extensive preprocessing and feature engineering. Achieved 77.9% F1-score using KNN + BoW + Cosine Similarity, delivering a deployable model and insights for risk mitigation.</p>
+                    <h3>🔗 Text Mining for Airbnb Listing Prediction</h3>
+                    <p style="text-align: justify;">Built a multilingual (EN, PT, FR, ES) text classification model to predict Airbnb unlistings using NLP and ML. erformed extensive text preprocessing and engineered features from property descriptions and host bios. Achieved 77.9% F1-score using KNN + BoW + Cosine Similarity, delivering a deployable model and insights for risk mitigation.</p>
                 </div>
             </a>
 
             <a href="https://github.com/SabeenAshraf/Data_Mining" target="_blank" class="card-link">
                 <div class="card">
                     <img src="insurance-segmentation.png" alt="Insurance Segmentation">
-                    <h3>Customer Segmentation for Insurance</h3>
+                    <h3>🔗 Customer Segmentation for Insurance</h3>
                     <p style="text-align: justify;">Performed customer segmentation using advanced preprocessing and multiple clustering methods, identifying three distinct profiles based on premiums and demographics. Delivered actionable marketing strategies and ensured strong interpretability with decision trees to enable personalized, data-driven campaign targeting.</p>
                 </div>
             </a>
@@ -356,7 +356,7 @@
                 <div class="card">
                     <img src="smith-prediction.png" alt="Smith Parasite ML App">
                     <h3>🔗 Smith Parasite ML Prediction App</h3>
-                    <p style="text-align: justify;">Developed a machine learning pipeline to predict the probability of contracting The Smith Parasite disease, achieving a 98.9% F1-score. Included data preprocessing, feature engineering, model training, and evaluation. Built a Flask API, integrated it with a web app, and deployed on cloud.</p>
+                    <p style="text-align: justify;">Developed a machine learning pipeline to predict the probability of contracting The Smith Parasite disease, achieving a 98.9% F1-score. Included data preprocessing , feature engineering, model training, and evaluation. Built a Flask API, integrated it with a web application, and deployed on cloud platform.</p>
                 </div>
             </a>
 
@@ -438,8 +438,7 @@
     <footer id="footer" class="footer">
         <p>Connect with me:
             <a href="mailto:sabeen.mv@gmail.com"><i class="fas fa-envelope"></i></a>
-            <a href="https://linkedin.com/in/sabeenmubashar"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/sabeenmubashar"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/sabeenashraf"><i class="fab fa-github"></i></a>
         </p>
     </footer>
 
