--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="card">
                     <img src="cancer-detection.png" alt="Cancer Detection Project">
                     <h3>🔗 Deep Learning-Based Cancer Detection</h3>
-                    <p style="text-align: justify;">Built a breast cancer classification model using the BACH dataset with 400 histology images across four classes. Applied custom preprocessing, augmentation, and image resizing. Used ResNet50, InceptionV3, and a custom CNN, achieving 93.7% AUROC, showcasing deep learning’s effectiveness in histopathological image analysis.</p>
+                    <p style="text-align: justify;">Built a robust breast cancer classification model using the BACH dataset with 400 histology images across four classes. Applied custom preprocessing, augmentation, and image resizing techniques. Used ResNet50, InceptionV3, and a custom CNN, achieving 93.7% AUROC, effectively showcasing deep learning’s effectiveness in histopathological image analysis.</p>
                 </div>
             </a>
 
